# SonicEdge

./: .gitignore  AGENTS.md  Cargo.toml  README.md  env.example  foundry.toml  justfile
.github/workflows/: rust.yml
bins/sniper/: Cargo.toml
bins/sniper/src/: main.rs
config/: sonic.alchemy.toml  sonic.anvil.toml  sonic.example.toml
contracts/: README.md  SonicSniperExecutor.sol  ZooLimitToken.sol
contracts/abi/: SonicSniperExecutor.json
contracts/bytecode/: SonicSniperExecutor.hex
contracts/test/: SonicSniperExecutor.t.sol
crates/bot/: Cargo.toml
crates/bot/src/: abi.rs  lib.rs  metrics.rs  notifier.rs  orchestrator.rs  state.rs
crates/chain/: Cargo.toml
crates/chain/src/: channel.rs  client.rs  fetcher.rs  heads.rs  lib.rs  metrics.rs  pending.rs  reconnect.rs  txpool.rs
crates/core/: Cargo.toml
crates/core/src/: abi.rs  config.rs  dedupe.rs  error.rs  lib.rs  metrics.rs  modes.rs  types.rs  utils.rs
crates/dex/: Cargo.toml
crates/dex/abi/: IUniswapV2Factory.json  IUniswapV2Pair.json  IUniswapV2Router02.json
crates/dex/src/: abi.rs  decoder.rs  lib.rs  pair.rs  pair_cache.rs
crates/executor/: Cargo.toml
crates/executor/src/: abi.rs  fees.rs  lib.rs  nonce.rs  sender.rs  tx_builder.rs
crates/risk/: Cargo.toml
crates/risk/src/: abi.rs  engine.rs  lib.rs  types.rs
docs/: ROADMAP.md  architecture.md  ops-runbook.md
samples/: pending_txs.json
scripts/: anvil_pipeline.sh  submit_liquidity_eth.sh
scripts/logrotate/: sonicedge
scripts/systemd/: sonicedge.service
