[workspace]
members = [
  "crates/core",
  "crates/chain",
  "crates/dex",
  "crates/risk",
  "crates/executor",
  "crates/bot",
  "bins/sniper",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
alloy = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = "0.14"
futures-util = "0.3"
hex = "0.4"
lru = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
dotenvy = "0.15"

prometheus = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
