[package]
name = "sniper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true

sonic-bot = { path = "../../crates/bot" }
sonic-chain = { path = "../../crates/chain" }
sonic-core = { path = "../../crates/core" }
sonic-dex = { path = "../../crates/dex" }
sonic-executor = { path = "../../crates/executor" }
