[package]
name = "sonic-chain"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
futures-util.workspace = true
prometheus.workspace = true
sonic-core = { path = "../core" }
tokio.workspace = true
tracing.workspace = true
