[package]
name = "sonic-dex"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
lru.workspace = true
serde.workspace = true
sonic-core = { path = "../core" }
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
